--- a/clash.line.ini
+++ b/clash.line.ini
@@ -9,6 +9,7 @@ ruleset=📀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ruleset=🎮 魔兽世界,https://raw.githubusercontent.com//lsykc/clashrule/main/WorldofWarcraft.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/lsykc/clashrule/main/ProxyLite.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+ruleset=🌍 国外,[]GEOSITE,geolocation-!cn
 ruleset=➡️ 国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
