--- a/clash.line.ini
+++ b/clash.line.ini
@@ -11,7 +11,7 @@ ruleset=🎮 魔兽世界,https://raw.githubusercontent.com//lsykc/clashrule/mai
 ruleset=🌍 国外,https://raw.githubusercontent.com/lsykc/clashrule/main/ProxyLite.list
 ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 ruleset=🌍 国外,[]GEOSITE,geolocation-!cn
-ruleset=🌍 国外,[]GEOIP,!CN
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=➡️ 漏网,[]FINAL
 
 ;2、策略组（域名组-节点组）
